# Robotica-ProyectoIntermedio

./: README.md  appV2.mlapp
Intermedio/: CMakeLists.txt  package.xml
Intermedio/config/: joint_controller.yaml  joint_controller_1.yaml  joint_controller_2.yaml
Intermedio/launch/: gazebop.launch  inter.launch  phantom.launch  phanton_gazebo.launch
Intermedio/urdf/: camera.xacro  phantom_1.xacro  phantom_2.xacro  phantom_links-joints.xacro  phantom_parameters1.xacro  phantom_parameters2.xacro
Intermedio/world/: Hola.txt  mundo.world  mundo2.world  mundo3.world
