<?xml version="1.0"?>
<package format="2">
  <name>intermedio</name>
  <version>0.0.0</version>
  <description>The intermedio package</description>

   <maintainer email="gustavo@todo.todo">gustavo</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <build_depend>controller_manager</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <exec_depend>controller_manager</exec_depend>des
  <build_depend>joint_state_controller</build_depend>
  <build_export_depend>joint_state_controller</build_export_depend>

</package>